--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Nick Strayer's CV"
-author: Nick Strayer
+title: "Maali Ahmed's CV"
+author: Maali Ahmed
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
@@ -77,13 +77,9 @@ Language Skills {#skills}
 ```{r}
 skills <- tribble(
   ~skill,               ~level,
-  "R",                  5,
-  "Javascript (d3.js)", 4.5,
-  "Python",             4,
-  "Bash",               3.5,
-  "SQL",                3,
-  "C++",                3,
-  "AWK",                3
+  "Tying R",              4,
+  "future Python",        3,
+  "maybe Java",           2
 )
 
 build_skill_bars(skills)
@@ -108,14 +104,14 @@ Last updated on `r Sys.Date()`.
 Main
 ================================================================================
 
-Nick Strayer {#title}
+Maali Ahmed {#title}
 --------------------------------------------------------------------------------
 
 
 ```{r}
-intro_text <- "I have made [visualizations viewed by hundreds of thousands of people](https://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), [sped up query times for 25 terabytes of data by an average of 4,800 times](https://livefreeordichotomize.com/2019/06/04/using_awk_and_r_to_parse_25tb/), and built [packages for R](https://github.com/nstrayer/shinysense) that let you [do magic](http://nickstrayer.me/dataDayTexas/).
+intro_text <- "I am currently in school trying to obsorb all this knowledge.
 
-Currently searching for a data science position that allows me to build tools using visualization and machine learning to help people explore and understand their data. 
+In the futre, I will be searching for a program evaluation role. 
 "
 
 cat(sanitize_links(intro_text))
@@ -145,7 +141,7 @@ Industry Experience {data-icon=suitcase}
 --------------------------------------------------------------------------------
 
 ::: aside
-I have worked in a variety of roles ranging from journalist to software engineer to data scientist. I like collaborative environments where I can learn from my peers. 
+I have not worked in this field yet.  I like collaborative environments where I can learn from my peers. 
 :::
 
 ```{r}
@@ -160,7 +156,7 @@ Teaching Experience {data-icon=chalkboard-teacher}
 --------------------------------------------------------------------------------
 
 ::: aside
-I am passionate about education. I believe that no topic is too complex if the teacher is empathetic and willing to think about new methods of approaching task. 
+I am passionate about my data science courses and I hope to keep growing in this field. 
 :::
 
 ```{r}
@@ -173,7 +169,7 @@ Selected Data Science Writing {data-icon=chart-line}
 
 
 ::: aside
-I regularly blog about data science and visualization on my blog [LiveFreeOrDichotomize.](https://livefreeordichotomize.com/)
+I tried to make this CV two pages but I couldnt think of more to write. I do understand the format and love that I have the option to utilize this in the future. 
 :::
 
 ```{r}
