--- a/index.Rmd
+++ b/index.Rmd
@@ -63,11 +63,9 @@ Contact {#contact}
 --------------------------------------------------------------------------------
 
 
-- <i class="fa fa-envelope"></i> nick.strayer@gmail.com
-- <i class="fa fa-twitter"></i> NicholasStrayer
-- <i class="fa fa-github"></i> github.com/nstrayer
-- <i class="fa fa-link"></i> [nickstrayer.me](http://nickstrayer.me/)
-- <i class="fa fa-phone"></i> (734) 645-0110
+- <i class="fa fa-envelope"></i> maali.ahmed@asu.edu
+- <i class="fa fa-github"></i> github.com/maaliahmed
+- <i class="fa fa-phone"></i> (555) 555-0055
 
 
 
@@ -128,15 +126,6 @@ print_section(position_data, 'education')
 
 
 
-Research Experience {data-icon=laptop}
---------------------------------------------------------------------------------
-
-```{r}
-print_section(position_data, 'research_positions')
-```
-
-
-
 Industry Experience {data-icon=suitcase}
 --------------------------------------------------------------------------------
 
@@ -152,16 +141,6 @@ print_section(position_data, 'industry_positions')
 <br>
 <br>
 
-Teaching Experience {data-icon=chalkboard-teacher}
---------------------------------------------------------------------------------
-
-::: aside
-I am passionate about my data science courses and I hope to keep growing in this field. 
-:::
-
-```{r}
-print_section(position_data, 'teaching_positions')
-```
 
 
 Selected Data Science Writing {data-icon=chart-line}
@@ -178,31 +157,6 @@ print_section(position_data, 'data_science_writings')
 
 
 
-Selected Press (About)  {data-icon=newspaper}
---------------------------------------------------------------------------------
-
-```{r}
-print_section(position_data, 'about_me_press')
-```
-
-
-
-Selected Press (By)  {data-icon=newspaper}
---------------------------------------------------------------------------------
-
-```{r}
-print_section(position_data, 'by_me_press')
-```
-
-
-
-
-Selected Publications, Posters, and Talks {data-icon=book}
---------------------------------------------------------------------------------
-
-```{r}
-print_section(position_data, 'academic_articles')
-```
 
 
 
