--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Nick Strayer's CV"
-author: Nick Strayer
+title: "Maali ahmed's CV"
+author: maali Ahmed
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
@@ -63,11 +63,9 @@ Contact {#contact}
 --------------------------------------------------------------------------------
 
 
-- <i class="fa fa-envelope"></i> nick.strayer@gmail.com
-- <i class="fa fa-twitter"></i> NicholasStrayer
-- <i class="fa fa-github"></i> github.com/nstrayer
-- <i class="fa fa-link"></i> [nickstrayer.me](http://nickstrayer.me/)
-- <i class="fa fa-phone"></i> (734) 645-0110
+- <i class="fa fa-envelope"></i> maali.ahmed@asu.edu
+- <i class="fa fa-github"></i> github.com/maaliahmed
+- <i class="fa fa-phone"></i> (555) 555-5555
 
 
 
